<resources>
    <string name="action_settings">Settings</string>
    <string name="servicedesc">apdu service</string>
    <string name="aiddescription">aid description</string>
    <string name="accept_payments_new_addr">Generate new address</string>
    <string name="title_activity_node_pairing">node_pairing</string>
    <string name="title_activity_trades">Trades</string>
    <string name="title_activity_nodes">Wallets</string>
    <string name="large_text">Loading, please wait...\n\n</string>
    <string name="title_activity_position">Position</string>
    <string name="title_activity_tradelog">Trade log</string>
    <string name="title_activity_trade">Trade</string>
    <string name="title_activity_chat">DAG chat</string>
    <string name="title_activity_tx">TxTrade</string>
    <string name="title_activity_selitems">Items selection</string>
    <string name="title_activity_files">Files</string>
    <string name="your_ip">Your IP</string>
    <string name="status">Status</string>
    <string name="chat">Chat</string>
    <string name="enter_message">Enter message</string>
    <string name="loading">Loading ...</string>
    <string name="endpointcopied">Endpoint copied to clipboard</string>
    <string name="select_protocol_role">Start role</string>
    <string name="mode_custodial">Custodial mode.\nYour private data is stored in other\'s node.\nFor maximum privacy run a node.</string>
    <string name="mode_non_custodial">Non-custodial Mode.\nYour private data is protected in your own hardware.\nThis mode provides the maximum privacy, well done!.</string>
    <string name="follower">Follower</string>
    <string name="initiator">Initiator</string>
    <string name="transaction">Transaction</string>
    <string name="myendpoint">My QR</string>
    <string name="endpoint_lbl">Endpoint</string>
    <string name="balances">Balances</string>
    <string name="helpcamera">Place your camera above the QR code.\n Make it fit in the area</string>
    <string name="picknode">Pick a random node</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="tpyeendpoint">Paste endpoint</string>
    <string name="use">Enter</string>
    <string name="title">Title</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="logviewer">Log viewer</string>
    <string name="trader">Trade</string>
    <string name="world">World</string>
    <string name="balance">Balance</string>
    <string name="scanendpoint">Scan QR</string>
    <string name="showmyendpoint">My QR</string>
    <string name="activetrades">Business</string>
    <string name="publickeys">Public keys</string>
    <string name="thisdevice">This device Public Key</string>
    <string name="nodehash">Remote wallet</string>
    <string name="connection">Connection status:</string>
    <string name="renewip">Check IP Address</string>
    <string name="ipaddress">IP Address</string>
    <string name="tcpport">TCP Port</string>
    <string name="channel">Channel</string>
    <string name="connect">Reconnect with PIN</string>
    <string name="resultsview">Results view</string>
    <string name="pairnodehelp">gov:~$ wallet pair &lt;this device public key&gt;</string>
    <string name="softwareversion">Software version</string>
    <string name="buildfromsources">Build from sources</string>
    <string name="aboutthisapp">About this app</string>
    <string name="selectproducts">Select Products:</string>
    <string name="catalogue">Catalogue</string>
    <string name="scanitems">Scan items</string>
    <string name="selecteditems">Selected Items (basket):</string>
    <string name="checkout">Checkout</string>
    <string name="viewinvoice">View invoice</string>
    <string name="viewbill">View bill</string>
    <string name="localdocuments">Available local documents:</string>
    <string name="actions">Actions</string>
    <string name="redirection">Suggested redirection</string>
    <string name="backtospecialist">Back to Specialist</string>
    <string name="itemlist">Item list</string>
    <string name="tradeid">trade #</string>
    <string name="closeandarchive">Close &amp; Archive</string>
    <string name="online">online</string>
    <string name="unknown">unknown</string>
    <string name="reason">reason</string>
    <string name="endpointlabel">Endpoint</string>
    <string name="me">ME</string>
    <string name="personality">personality</string>
    <string name="peer">PEER</string>
    <string name="handshake">Handshake [Anonymous]</string>
    <string name="log">Log</string>
    <string name="data">Data</string>
    <string name="reset">Reset</string>
    <string name="reload">Reload</string>
    <string name="terminate">Archive trade</string>
    <string name="selectcoin">Select coin</string>
    <string name="enteramount">Enter amount</string>
    <string name="transfer">Continue</string>
    <string name="tryingrandomnode">trying random node.</string>
    <string name="solved">solved</string>
    <string name="ago">ago.</string>
    <string name="seconds">seconds</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="days">days</string>
    <string name="documentinfuture">Document was created in the future in</string>
    <string name="documentupdated">Updated</string>
    <string name="documentexpired">Expired</string>
    <string name="documentexpiresin">Expires in</string>
    <string name="peerdifferentdocversion">Peer\'s got a different version of this document.</string>
    <string name="peerhasdocumentalready">Peer\'s already got this document.</string>
    <string name="peerhasnotdocument">Peer hasn\'t got this document yet.</string>
    <string name="replacewithyourownaction">Replace with your own action</string>
    <string name="givingupretrievinglogo">Without logotype.</string>
    <string name="givingupretrievingico">Without icon.</string>
    <string name="dataisnull">data is null</string>
    <string name="invoicecryptotx">Invoice (crypto-tx template)</string>
    <string name="billcryptotransaction">Bill (crypto-transaction)</string>
    <string name="selectproduct">Select product</string>
    <string name="pleasewait">Please wait...</string>
    <string name="patienthealthdata">Patient\'s health data</string>
    <string name="selectrequesttype">Select request type:</string>
    <string name="soathecamneosai">Soathecam NeOS A.I.</string>
    <string name="riversidepharmacy">Riverside Pharmacy</string>
    <string name="wehavefinished">We have finished.</string>
    <string name="generalpracticioner">General Practitioner</string>
    <string name="specialist">Specialist</string>
    <string name="anonymous">anonymous</string>
    <string name="protocolandrole">protocol+role:</string>
    <string name="invalidpersonality">Invalid personality</string>
    <string name="datatrade">Data. Trade</string>
    <string name="walletnotok">Wallet is not ok.</string>
    <string name="checkforupdates">Check for updates</string>
    <string name="forgetapknash">Forget apkhash</string>
    <string name="installupdates">Install updates</string>
    <string name="appupdates">Application updates</string>
    <string name="newmessagefromtrade">New message from trade</string>
    <string name="youhavenewmessagefromtrade">You have a new message for tradeid</string>
    <string name="updatesareavailable">Updates are available</string>
    <string name="systemisuptodate">The system is up to date.</string>
    <string name="walletinitialized">Wallet initialized.</string>
    <string name="walletiniterror">wallet init error:</string>
    <string name="noupgradepackages">No upgrade packages are available at this moment</string>
    <string name="installationcacnelledbyuser">Installation cancelled by user.</string>
    <string name="newtrade">New trade</string>
    <string name="newtradeadded">A new trade has been added to active trades</string>
    <string name="walletunreachableat">FAIL, Wallet is unreachable at</string>
    <string name="failtriedwalletat">Fail! Tried wallet at</string>
    <string name="thereissomeproblem">. There is some problem:</string>
    <string name="successwalletfound">Success!, wallet found at</string>
    <string name="itsays">. It says:</string>
    <string name="unexpectederror">Unexpected error</string>
    <string name="updatedipto">IP Address updated to</string>
    <string name="nocoinsinwallet">[No coins in wallet]</string>
    <string name="disabledfeature">Disabled feature. Apologies.</string>
    <string name="error">Error:</string>
    <string name="cannotcreatetraderUI">Cannot create trader UI</string>
    <string name="noptrotocolsavailable">No protocols available:</string>
    <string name="sorryselectionunsuccesful">Sorry, the selection was unsuccessful</string>
    <string name="therearenotrades">Initiate new trade.</string>
    <string name="downloadedfilefrom">Downloaded file from</string>
    <string name="youhavenewdownloadedfile">You have a new file downloaded at</string>
    <string name="failingtext">Failing the test? authorize this device first using this command in your node:</string>
    <string name="select_language">Select language</string>
    <string name="settings">Connection Settings</string>
    <string name="exit">Exit</string>
    <string name="allactivetrades">All active trades</string>
    <string name="addresscopied">Your wallet address has been copied to clipboard</string>
    <string name="connectingtonode">Connecting to node...</string>
    <string name="loadinglog">Loading ...</string>
    <string name="loadingbalances">Loading ...</string>
    <string name="loadingtrader">Loading ...</string>
    <string name="loadingprotocols">Loading ...</string>
    <string name="loadingdata">Loading ...</string>
    <string name="loadingchat">Loading ...</string>
    <string name="available">Available</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="save">Save</string>
    <string name="acra_toast_text">Sending ACRA crash report</string>
    <string name="select_menu">&lt; Select an option from menu.</string>
    <string name="initapp">Configuring application...</string>
    <string name="changelangnext">El cambio tendr&#xE1; efecto cuando cambie de negociacion o salga de la aplicaci&#xF3;n.</string>
    <string name="expiringin">Expiring in</string>
    <string name="sharewiththisAInode">Send to this A.I. node</string>
    <string name="sharewiththisspecialist"> Share with this specialist</string>
    <string name="sharewiththispharmacy">Request to pharmacy</string>
    <string name="updatednadaysago">Updated N/A days ago</string>
    <string name="appexplained">An appointment allows the access to those profesional services requiring it.</string>
    <string name="presexplained">A prescription is needed to acquire certain products from the pharmacy.</string>
    <string name="prescriptionexplained">Your request for our A.I. service. Send it over to us to start the process.</string>
    <string name="airequestexplained">A request for our A.I. service. Send it over to us to start the process.</string>
    <string name="airesultsexplained">The document delivered by our A.I based on your EHR. It can be shared with your practicer.</string>
    <string name="ehrexplained">Your private Electronic Health Records (EHR) stored safely in your node.</string>
    <string name="computingpleasewait">Computing... please wait.</string>
    <string name="basket">Basket</string>
    <string name="add">Add</string>
    <string name="scan">Scan</string>
    <string name="pay">Pay</string>
    <string name="emptybasket">Your basket is empty</string>
    <string name="invoice">Invoice</string>
    <string name="invoicedescription">Check and verify your invoice and/or proceed to finish payment</string>
</resources>