<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" tools:showIn="navigation_view">
    <group android:checkableBehavior="single" android:id="@+id/group1">
        <item android:id="@+id/nav_balance" android:icon="@drawable/ic_balance" android:title="@string/balance" />
    </group>

    <group android:checkableBehavior="single" android:id="@+id/group2">
        <item android:id="@+id/nav_world" android:icon="@drawable/ic_world" android:title="@string/world" />
    </group>

    <group android:checkableBehavior="single" android:id="@+id/group3">
        <item android:id="@+id/nav_scanendpoint" android:icon="@drawable/ic_qr" android:title="@string/scanendpoint" />
        <item android:id="@+id/nav_showmyendpoint" android:icon="@drawable/ic_show_my_endpoint" android:title="@string/showmyendpoint" />
    </group>

    <group android:checkableBehavior="single" android:id="@+id/group4">
        <item android:id="@+id/nav_activetrades" android:icon="@drawable/ic_basket" android:title="@string/activetrades" />
    </group>

    <group android:checkableBehavior="single" android:id="@+id/group5">
    </group>

    <group android:checkableBehavior="single" android:id="@+id/group6">
        <item android:id="@+id/nav_updateavailable" android:icon="@drawable/ic_update" android:title="@string/updatesareavailable" android:visible="false"/>
        <item android:id="@+id/nav_settings" android:icon="@drawable/ic_settings" android:title="@string/settings" />
        <item android:id="@+id/nav_exit" android:icon="@drawable/ic_exit" android:title="@string/exit" />
    </group>
</menu>

