<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.widget.LinearLayout
        android:id="@+id/close"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            tools:layout_editor_absoluteX="0dp">

        <Switch
            android:id="@+id/switch_online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/online"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:theme="@style/switch_theme"
            />

        <TextView
            android:id="@+id/onlinetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:layout_marginRight="20dp"
            tools:text="---------" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/status"
                android:textSize="14dp"
                />

            <TextView
                android:id="@+id/state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/unknown"
                android:textSize="14sp"
                tools:layout_editor_absoluteY="158dp" />

            <TextView
                android:id="@+id/reason"
                android:layout_width="fill_parent"
                android:layout_height="21dp"
                android:layout_marginStart="16dp"
                android:text="@string/reason"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/textView20"
            android:layout_width="fill_parent"
            android:layout_height="21dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/endpointlabel"
            />

        <TextView
            android:id="@+id/endpoint"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginStart="8dp"
            android:text="@string/myendpoint"
            />

        <android.widget.LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
             >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/initiator_selectprotocol"
                android:text="@string/select_protocol_role"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_open_doc"
                android:drawablePadding="20dp"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"/>
        </android.widget.LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorCardFollowerBG">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                tools:layout_editor_absoluteX="0dp">


                <android.widget.LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/pic_initiator"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/ic_avatar"
                        />

                    <android.widget.LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <android.widget.LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" >

                            <TextView
                                android:id="@+id/initiator_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="8dp"
                                android:text="@string/me"
                                android:textSize="18sp"
                                />

                            <TextView
                                android:id="@+id/personality_initiator_lbl"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="8dp"
                                android:text="@string/personality" />

                        </android.widget.LinearLayout>

                        <TextView
                            android:id="@+id/personality_initiator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text=""
                            />

                    </android.widget.LinearLayout>

                </android.widget.LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorCardInitiatorBG"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                tools:layout_editor_absoluteX="0dp">

                <android.widget.LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/pic_follower"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/ic_avatar"
                        />

                    <android.widget.LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <android.widget.LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" >

                            <TextView
                                android:id="@+id/follower_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="8dp"
                                android:text="@string/peer"
                                android:textSize="18sp"
                                />

                            <TextView
                                android:id="@+id/personality_follower_lbl"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="8dp"
                                android:text="@string/personality"
                                />

                        </android.widget.LinearLayout>

                        <TextView
                            android:id="@+id/personality_follower"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text=""
                            />
                    </android.widget.LinearLayout>

                </android.widget.LinearLayout>

                <android.widget.LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_light_background"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                tools:layout_editor_absoluteX="0dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save_bookmark_btn"
                    android:text="Peer's shared bookmarks."
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_open_doc"
                    android:drawablePadding="20dp"
                    android:textAlignment="textStart"

                    android:textColor="@android:color/white"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/personality_exchange_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_personality"
                    android:drawablePadding="20dp"
                    android:text="@string/handshake"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/log_btn"
                    android:text="@string/log"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_open_doc"
                    android:drawablePadding="20dp"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/white"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/data_btn"
                    android:text="@string/data"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_open_doc"
                    android:drawablePadding="20dp"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/white"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_reload"
                    android:text="@string/reload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_reset"
                    android:drawablePadding="20dp"
                    android:textAlignment="textStart"

                    android:textColor="@android:color/white"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_reset"
                    android:text="@string/reset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_reset"
                    android:drawablePadding="20dp"
                    android:textAlignment="textStart"


                    android:textColor="@android:color/white"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/closetrade_btn"
                    android:text="@string/terminate"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_archive"
                    android:drawablePadding="20dp"
                    android:textAlignment="textStart"

                    android:textColor="@android:color/white"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </android.widget.LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

