<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/endpointbox"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Connection"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal|center_vertical"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/walletd_address_lo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:hint="@string/ipaddress"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/resolveip"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/walletd_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="127.0.0.1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/tcpport"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/walletd_port"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="16673"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/channel"
            android:layout_marginRight="1dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/channel"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="0"
                />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>

